[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player/Character.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/CharacterBody.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/weap04.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/char00.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/char00eye.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Player/HammerBody.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 177.5

[node name="Player" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
MOUSE = false
hitpoints = 100

[node name="Body" type="RigidBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 2
mass = 300.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.5
custom_integrator = false
continuous_cd = 0
contacts_reported = 2
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 2 )
hammer_joint = NodePath("../HammerJoint")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body" index="0"]

shape = SubResource( 1 )

[node name="Glow" type="Sprite" parent="Body" index="1"]

modulate = Color( 0.6875, 0, 0, 1 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Body" type="Sprite" parent="Body" index="2"]

scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Eye" type="Sprite" parent="Body" index="3"]

position = Vector2( 100, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="GlowTimer" type="Timer" parent="Body" index="4"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="Hammer" parent="." index="1" instance=ExtResource( 6 )]

position = Vector2( 0, 500 )
mass = 200.0

[node name="HammerJoint" type="PinJoint2D" parent="." index="2"]

node_a = NodePath("../Body")
node_b = NodePath("../Hammer")
bias = 0.0
disable_collision = true
softness = 2.0

[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]

[connection signal="timeout" from="Body/GlowTimer" to="." method="_on_GlowTimer_timeout"]


